# Orion-lang

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
backend/: CMakeLists.txt
backend/src/: backend.cpp
frontend/: CMakeLists.txt
frontend/src/: Keyword.cpp  Keyword.hpp  Lexer.cpp  Lexer.hpp  LexerError.cpp  LexerError.hpp  Operators.cpp  Operators.hpp  Parser.hpp  Punctuator.cpp  Punctuator.hpp  TokenStream.cpp  TokenStream.hpp  Tokens.hpp  main.cpp
frontend/src/ast/: ASTArena.cpp  ASTArena.hpp  ASTProgram.cpp  ASTProgram.hpp  ASTRules.hpp  ASTStack.cpp  ASTStack.hpp  CFGrammar.cpp  CFGrammar.hpp  C_Grammar_Reference.hpp  Expr.hpp  IdentAST.hpp  Parser.cpp  Parser.hpp  ParserTest.cpp  ParserTest.hpp  StorageAST.hpp
frontend/src/lexer/: Lexer.cpp  Lexer.hpp  LexerError.cpp  LexerError.hpp
frontend/src/parser/: ActionTable.cpp  ActionTable.hpp  ActionTableBuilder.cpp  ActionTableBuilder.hpp  ParseStack.cpp  ParseStack.hpp  Parser.cpp  Parser.hpp  ParserError.cpp  ParserError.hpp  Symbols.hpp  TopDownParser.hpp
frontend/src/tests/: ActionTableTests.hpp  LexerTests.hpp  ParserTests.hpp
frontend/src/tests/lexer/: LexerTests.hpp
frontend/src/tokens/: Keyword.cpp  Keyword.hpp  Operators.cpp  Operators.hpp  Punctuator.cpp  Punctuator.hpp  TokenStream.cpp  TokenStream.hpp  Tokens.cpp  Tokens.hpp
tests/: sample.cpp
